--- a/ember/index.html
+++ b/ember/index.html
@@ -31,8 +31,8 @@
                     <h1>Ember</h1>
                     <h2>An Interactive Animation by Jai Matthews</h2>
                     <br><button onclick="begin()">Begin</button>
-                    <br><button>Second Button</button>
-                    <br><button>Third</button>
+                    <br><button onclick="">How To Play</button>
+                    <br><button onclick="window.location.href = '../read/ember'">Read More</button>
                 </div>
             </div>
             <canvas></canvas>
@@ -49,4 +49,18 @@
     </div>
 </body>
 </html>
-<script src="ember.js"></script>
+
+<!-- menu navigation -->
+<script src="js/menu.js"></script>
+
+<!-- basic functions -->
+<script src="js/functions.js"></script>
+
+<!-- ball classes -->
+<script src="js/classes.js"></script>
+
+<!-- display & scroll -->
+<script src="js/window.js"></script>
+
+<!-- animations (menu) -->
+<script src="js/animate_menu.js"></script>
