--- a/ember/open.html
+++ b/ember/open.html
@@ -35,4 +35,15 @@
     </div>
 </body>
 </html>
-<script src="ember.js"></script>
+
+<!-- basic functions -->
+<script src="js/functions.js"></script>
+
+<!-- ball classes -->
+<script src="js/classes.js"></script>
+
+<!-- display & scroll -->
+<script src="js/window.js"></script>
+
+<!-- animations (main) -->
+<script src="js/animate_ember.js"></script>
