tiny countdown bug
just to better save the image urls!

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -101,7 +101,7 @@ function generate() {
     time = document.getElementById("time").value
     backdrop = document.getElementById("backdrop").value
 
-    window.location.href = "main.html?title="+title+"&datetime="+date+" "+time+"&background="+backdrop;
+    window.location.href = "main.html?title="+title+"&datetime="+date+" "+time+'&background="'+backdrop+'"';
 }
 
 </script>
