--- a/bookabench.html
+++ b/bookabench.html
@@ -7,4 +7,4 @@
         border: 0px;
     }
 </style>
-<iframe src="https://bookabench.jaimatthews.cf/" style="height: 100%; width: 100%;"></iframe>
+<iframe src="https://bookabench.jaimatthews.com/" style="height: 100%; width: 100%;"></iframe>
