--- a/instagram.html
+++ b/instagram.html
@@ -51,7 +51,7 @@
         </div> -->
 
         <div class="media">
-            <p style="color: red;">Loading images...</p>
+            <p style="color: red;" id="message">Loading images...</p>
 
 
 
