--- a/projects.html
+++ b/projects.html
@@ -45,5 +45,5 @@
 <script src="js/canvas.js"></script>
 <script>
     setCookie("explored","allpost")
-    retrieve("all","links.json")
+    bootUp("all","links.json")
 </script>
