--- a/read/portfolios.html
+++ b/read/portfolios.html
@@ -21,16 +21,42 @@
     <a href="../index.html"><img src='../assets/icon.png' class="icon small"></a>
     <br>
     <div class="article">
-        <h1>Canvas Castle</h1>
-        <h2>Jai Matthews ⋅ 2025</h2>
-        <p>Canvas Castle (working title) is an upcoming web game I've been working on. The game is a platformer made purely in JavaScript and on the HTML canvas. All of the rendering, level encoding, physics, art, and animation is all my own work and made without a dedicated game engine. In this sense, it's much more of an exercise in difficult programming than it is a high quality video game (after all, why one earth would you make a game in JavaScript!). Nonetheless, I've tried to put in as much effort as I can to create a good product.</p>
-        <p>I'm hoping to release Canvas Castle in 2025, at which point I will add more to this article and go over some of the fascinating code I've had to write for the game.</p>
-        <img class="banner" src="../assets/portfolio/game_a.png">
+        <h1>Project Info</h1>
+        <h2>jaimatthews.com</h2>
+        <p>You can now view separate "article"-like pages for each of my projects, where I go into some of the details behind how they work, how I made them and for what reasons, and share some of the code and other behind-the-scenes info! From the projects page, click on the <i class='fa fa-info' aria-hidden='true'></i> symbol next to a project, OR go to any of them using the links below:</p>
+        <ul>
+        
+        </ul>
+        <p>This list should remain updated as new projects are added, as is scrapes the project list JSON and creates the list when you load the page!</p>
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"> </i> <a href="../index.html">Return Home</a> </p>
     </div>
 </body>
 </html>
 <script src="../js/cookies.js"></script>
 <script src="../js/footer.js"></script>
+<script src="../js/homeScripts.js"></script>
 <script src="../js/textScripts.js"></script>
 <script src="../js/canvas.js"></script>
+<script>
+
+    async function load() {
+        data = await fetchData("../links.json")
+
+        console.log(data)
+
+        listElement = document.querySelector('ul')
+
+        for (i = 0; i < data.length; i++) {
+            if (!data[i].portfolio) continue
+            listElement.innerHTML += 
+            `<li>
+            <a href="../${data[i].portfolio}">${data[i].title}</a>
+            </li>`
+        }
+
+        applyAnimations()
+    }
+
+    load()
+    
+</script>
