--- a/read/about.html
+++ b/read/about.html
@@ -32,7 +32,7 @@
         <p>This website has a contact form, do not abuse this with spam or inflammatory comments.</p>
         <h3>Final Notes</h3>
         <p>If you have any questions about the website, please feel free to <a href="contact">contact me</a>.</p>
-        <p>This website has been developed on land of the Kaurna people of the Adelaide Plains. I pay respects to elders past &amp; present.</p>
+        <p>This website has been developed on the lands of the Kaurna people of the Adelaide Plains. I pay respects to elders past &amp; present.</p>
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"> </i> <a href="../index.html">Return Home</a> </p>
     </div>
 </body>
