--- a/mysterynight/five.html
+++ b/mysterynight/five.html
@@ -18,17 +18,17 @@
     <div class="body body-small">
         <br><br><br><br><br>
         
-        <img src="assets/MNIcon-11.png" width="80px">
+        <img src="assets/mn5-star.png" width="80px">
         <h1 style="line-height: 0.3">Mystery Night Five</h1>
         <h2 style="line-height: 0.3;">The Revival Machine</h2>
         <i>By Jai Matthews <br>& Aidan de Sousa</i>
         <br><br>
         <div style="height: 600px;">
             <img src="assets/MN5.png" style="width: 400px; float: left;">
-            <img src="assets/MNIcon-11.png" width="300px" style="margin-top: 100px; filter: drop-shadow(0px 0px 5px black);">
+            <img src="assets/MNIcon-11.png" width="300px">
             <a><button class="but5" onclick="scrollToItem()">Read More</button></a><br><br>
-            <a><button class="but5">How to Play</button></a><br><br>
-            <a><button class="but5">Resources</button></a><br><br>
+            <a href="play.html?pageId=5"><button class="but5">How to Play</button></a><br><br>
+            <a href="resources.html?pageId=5"><button class="but5">Resources</button></a><br><br>
             <a href="explore.html"><button class="but5">Other Mystery Nights</button></a><br><br>
         </div>
         <h1 id="more">About Mystery Night Five</h1>
@@ -43,35 +43,34 @@
             </tr>
             <tr>
                 <td>Estimated Runtime:</td>
-                <td>TBD mins</td>
+                <td>60 mins</td>
             </tr>
             <tr>
                 <td>Difficulty:</td>
-                <td>TBD</td>
+                <td>Medium</td>
             </tr>
         </table>
-        <!-- <p>
+        <p>
             <br>
             <div class="quotes quotes5">
-                <i>“My ICM tells me there are multiple life signals in the engine room. I need you to activate the ship’s power so I can get into the bridge. Make sure you, you must activate the…”</i>
-                <p>-Officer Stevenson, Mystery Night Four</p>
+                <i>“All right; this situation is much worse than I thought. I’d better go and reassess my own security.”</i>
+                <p>-Harper, Mystery Night Five</p>
             </div>
-            Mystery Night Four saw the series reach new ground... literally.
+            Mystery Night Five took the technology used in MN4, pushed it even further, and made it even better!
             <div class="quotes quotes5">
                 <br>
-                <i>“One of 
-                    these divisions is thought to have ascended into the mountains, hence evolving into adequate mountaineers”</i>
-                <p>-Starship Darlington, Mystery Night Four</p>
+                <i>“It wasn’t always like this. Victor used to be kind. We would talk and the hours would fly by. He was a true friend. And there was Elliot too. Victor, Ava, and Elliot; an inseparable trio. The V-E-A. But then, there was the accident.”</i>
+                <p>-Ava, Mystery Night Five</p>
             </div>
-            The fourth Mystery Night, Starship Darlington, takes to the skies in a new installment. This time, set in space. But wait- Cue the flashing lights, the alarms, the panic. The spaceship is crashing! In 90 minutes, the Starship Darlington will collide on the surface of an uninhabited planet and it's up to YOU to save everyone. Technical officer stevenson is calling you and needs your help. Help him crack codes, find keys, and hack systems. For this first time in Mystery Night history, this installment features software made exclusively for MN4. Countless new puzzle-solving possibilities are opened by the presence of a laptop/ control-panel in the room of Mystery Night Four. So prepare yourself for the new sci-fi themed adventure in this latest Mystery Night. Enjoy!
+            In Mystery Night Five we’ve brought back everything we loved about MN4: the dynamic digital interface & the voice acted transmissions. And this time it follows a new narrative about the tragic story of three friends, and the lengths they’ll go to for each other. So, what was the big thing we changed in Mystery Night Five? The puzzles! Mystery Night Four was regrettably not very innovative in this domain so we’ve done away with our go-to puzzles and designed some new systems. The first third consists of one giant map that interconnects several puzzles organically, asking people to consider the whole thing at once. The second third greatly utilises the digital interface, and the final third of the mystery night consists of the puzzle design you know and love Mystery Nights 1-4, with their difficulties dialled right up!
             <div class="quotes quotes5">
                 <br>
-                <i>“What-? What’s that? What happened!?!”</i>
-                <p>-Officer Stevenson, Mystery Night Four</p>
+                <i>“The time has come. I will now activate the machine!”</i>
+                <p>-Victor, Mystery Night Five</p>
             </div><br>
-        </p> -->
-        <!-- <img src="assets/mn4-space.png" width="700px" style="border-radius: 30px; height: 200px; object-fit: cover"> -->
-        <img src="assets/MNIcon-11.png" width="300px" style="filter: drop-shadow(0px 0px 5px black);">
+        </p>
+        <img src="assets/mn5-map.png" width="700px" style="border-radius: 30px; height: 200px; object-fit: cover">
+        <img src="assets/MNIcon-11.png" width="300px">
 
 
     </div>
