--- a/mysterynight/play.html
+++ b/mysterynight/play.html
@@ -10,7 +10,7 @@
         <a href="two.html"><li id="navbar2">Two</li></a>
         <a href="three.html"><li id="navbar3">Three</li></a>
         <a href="four.html"><li id="navbar4">Four</li></a>
-        <a href="five.html"><li>Five</li></a>
+        <a href="five.html"><li id="navbar5">Five</li></a>
         <a href="info.html"><li class="end">Info</li></a>
     </ul>
 </header>
@@ -111,6 +111,15 @@
             <p><b>Mystery Night 4 App</b></p>
             <p>Please note the Mystery Night 4 Web App is of no use without additional access to documents, materials, and instructions. Please attain all of these before using the web app.</p>
             <a href="../MNIV/index.html"><button class="but4">Open.</button></a>
+        </div>
+        <div id="ht5" style="display: none;">
+            <img id="rdImg" src="assets/MNIcon-11.png" width="400px"><br>
+            <h2>Play Mystery Night Five.</h2>
+            <p>If you would like to play Mystery Night 5, please <a href="info.html">contact</a> Jai or Aidan.</p>
+            <br><br>
+            <p><b>Mystery Night 5 App</b></p>
+            <p>Please note the Mystery Night 5 Web App is of no use without additional access to documents, materials, and instructions. Please attain all of these before using the web app.</p>
+            <a href="../MNV/index.html"><button class="but5">Open.</button></a>
         </div>
     </div>
     <br><br><br><br>
