--- a/instagram.html
+++ b/instagram.html
@@ -72,5 +72,5 @@
 <script src="js/cookies.js"></script>
 <script src="js/footer.js"></script>
 <script src="js/textScripts.js"></script>
-<script src="js/art.js"></script>
+<script src="js/insta.js"></script>
 <script src="js/canvas.js"></script>
