--- a/read/passage.html
+++ b/read/passage.html
@@ -24,8 +24,10 @@
         <h1>Passage</h1>
         <h2>Jai Matthews ⋅ July 2025</h2>
         <p>Passage was a game made during the 2025 FGRL mid-year game jam.</p>
-        <p>There's lots to say about this project, so keep an eye out for when this page is populated with more information about the project!</p>
-        <p>In the meantime, you can read about &amp; play the game <a href="https://renshirolotosoraizel.itch.io/passage" target="_blank">here</a>.</p>
+        <p>I joined a team of four people and was put in charge of the physics &amp; mechanics of the game. As was inevitable, the result was very janky!</p>
+        <p>There's lots of say about this project, but a lot of it is described <a href="https://renshirolotosoraizel.itch.io/passage" target="_blank" style="color: rgb(16, 185, 169);">here</a>, so I won't repeat myself on this page.</p>
+        <p>Keep an eye out on this page in case I change my mind and add some more information about my involvement.</p>
+        <p>In the meantime, you can play the game&nbsp;<a href="https://renshirolotosoraizel.itch.io/passage" target="_blank" style="color: rgb(16, 185, 169);">here</a>.</p>
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"> </i> <a href="../index.html">Return Home</a> </p>
     </div>
 </body>
