--- a/read/portfoliocomingsoon.html
+++ b/read/portfoliocomingsoon.html
@@ -22,7 +22,7 @@
     <br>
     <div class="article">
         <h1>Coming Soon!</h1>
-        <h2>JaiMatthews.com/Portfolio</h2>
+        <h2>Subtitle</h2>
         <p>Thanks for showing interest in the behind-the-scenes for my projects! Unfortunately, I am still writing out all of the individual pages. I'm hoping to finish this one as soon as possible!</p>
         <p>To return to the home page, click below:</p>
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"> </i> <a href="../index.html">Return Home</a> </p>
