--- a/read/instagram.html
+++ b/read/instagram.html
@@ -31,6 +31,9 @@
         <p>The page is equipped to handle and display images of different aspect ratios and can display all items of 'carousel' images.</p>
         <img src="../assets/portfolio/art_d.png" class="standard">
         <h6>The artworks page.</h6>
+        <p>Unfortunately, this display API has one key issue. The API key needs to be refreshed. As I am working on a static website, I cannot automatically have the server refresh the API (say, every 30 days). This means that I am having to manually change the API key every time it is about the expire.</p>
+        <p>This is not a sustainable approach, I do not wish to create a website that requires constant maintenance. But in lieu of a better option, it's what I'm going with. I've even simplified the process by have a python script actually request the new key and change the code, but I need to run the script every time.</p>
+        <p>In future, I intend to make my website dynamic. This requires time and money, but when it happens I will be able to fix this issue once and for all!</p>
         <p>You can see the instagram page on any device by clicking <a href="https://jaimatthews.com/instagram" target="_blank">here</a>.</p>
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"> </i> <a href="../index.html">Return Home</a> </p>
     </div>
